Implement Wave 2 hardening from review plan